1.Nhánh cv1 cần thêm

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Nhánh main</h1>
+    <h2>Đây là đoạn code cv1 cần được hợp nhất vào code chính</h2>
   </body>
 </html>
